ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocp4-kt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp4-kt
  template:
    metadata:
      labels:
        app: ocp4-kt
    spec:
      containers:
        - name: ocp4-kt
          image: quay.io/terrencejun3210/ocp4-kt:v1
          ports:
            - containerPort: 80
