ocp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp4-kt
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: ocp4-kt
  selector:
    app: ocp4-kt
