ocp/route.yaml
apiVersion: v1
kind: Route
metadata:
  - name: ocp4-kt
spec:
  to:
    - kind: Service
    - name: ocp4-kt
  port:
    - targetPort: 8080
